--- a/tutorial/package.json
+++ b/tutorial/package.json
@@ -27,42 +27,42 @@
   "homepage": "https://github.com/jenofdoom/react-intermediate#readme",
   "private": true,
   "devDependencies": {
-    "@babel/core": "~7.1.6",
-    "@babel/plugin-proposal-object-rest-spread": "~7.0.0",
-    "@babel/polyfill": "~7.0.0",
-    "@babel/preset-env": "~7.1.6",
+    "@babel/core": "~7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "~7.4.4",
+    "@babel/polyfill": "~7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "~7.0.0",
-    "autoprefixer": "~9.3.1",
+    "autoprefixer": "~9.5.1",
     "babel-core": "~7.0.0-bridge.0",
-    "babel-jest": "~23.6.0",
+    "babel-jest": "~24.8.0",
     "babel-loader": "~8.0.4",
-    "bootstrap": "~4.1.3",
-    "css-loader": "~1.0.1",
-    "enzyme": "~3.7.0",
-    "enzyme-adapter-react-16": "~1.7.0",
-    "eslint": "~5.9.0",
+    "bootstrap": "~4.3.1",
+    "css-loader": "~2.1.1",
+    "enzyme": "~3.9.0",
+    "enzyme-adapter-react-16": "~1.13.0",
+    "eslint": "~5.16.0",
     "eslint-loader": "~2.1.1",
-    "eslint-plugin-react": "~7.11.1",
+    "eslint-plugin-react": "~7.13.0",
     "extract-text-webpack-plugin": "~4.0.0-beta.0",
-    "file-loader": "~2.0.0",
+    "file-loader": "~3.0.1",
     "html-webpack-plugin": "~3.2.0",
-    "jest": "~23.6.0",
-    "node-sass": "~4.10.0",
+    "jest": "~24.8.0",
+    "node-sass": "~4.12.0",
     "postcss-flexbugs-fixes": "~4.1.0",
     "postcss-loader": "~3.0.0",
-    "prop-types": "~15.6.2",
-    "react": "~16.6.3",
+    "prop-types": "~15.7.2",
+    "react": "~16.8.6",
     "react-addons-test-utils": "~15.6.2",
-    "react-dom": "~16.6.3",
-    "react-redux": "~5.1.1",
-    "react-router-dom": "~4.3.1",
-    "react-test-renderer": "~16.6.3",
+    "react-dom": "~16.8.6",
+    "react-redux": "~7.0.3",
+    "react-router-dom": "~5.0.0",
+    "react-test-renderer": "~16.8.6",
     "sass-loader": "~7.1.0",
     "style-loader": "~0.23.1",
     "url-loader": "~1.1.2",
-    "webpack": "~4.26.1",
-    "webpack-cli": "~3.1.2",
-    "webpack-dev-server": "~3.1.10",
+    "webpack": "~4.31.0",
+    "webpack-cli": "~3.3.2",
+    "webpack-dev-server": "~3.3.1",
     "whatwg-fetch": "~3.0.0"
   },
   "jest": {
@@ -86,6 +86,6 @@
     ]
   },
   "dependencies": {
-    "@babel/plugin-transform-modules-commonjs": "~7.1.0"
+    "@babel/plugin-transform-modules-commonjs": "^7.4.4"
   }
 }
