--- a/tutorial/package.json
+++ b/tutorial/package.json
@@ -27,42 +27,40 @@
   "homepage": "https://github.com/jenofdoom/react-intermediate#readme",
   "private": true,
   "devDependencies": {
-    "@babel/core": "~7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "~7.4.4",
-    "@babel/polyfill": "~7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "~7.0.0",
-    "autoprefixer": "~9.5.1",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "autoprefixer": "^9.6.4",
     "babel-core": "~7.0.0-bridge.0",
-    "babel-jest": "~24.8.0",
+    "babel-jest": "^24.9.0",
     "babel-loader": "~8.0.4",
     "bootstrap": "~4.3.1",
-    "css-loader": "~2.1.1",
-    "enzyme": "~3.9.0",
-    "enzyme-adapter-react-16": "~1.13.0",
-    "eslint": "~5.16.0",
-    "eslint-loader": "~2.1.1",
-    "eslint-plugin-react": "~7.13.0",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.5.1",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-react": "^7.16.0",
     "extract-text-webpack-plugin": "~4.0.0-beta.0",
-    "file-loader": "~3.0.1",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "~3.2.0",
-    "jest": "~24.8.0",
+    "jest": "^24.9.0",
     "node-sass": "~4.12.0",
     "postcss-flexbugs-fixes": "~4.1.0",
     "postcss-loader": "~3.0.0",
     "prop-types": "~15.7.2",
-    "react": "~16.8.6",
+    "react": "^16.10.2",
     "react-addons-test-utils": "~15.6.2",
-    "react-dom": "~16.8.6",
-    "react-redux": "~7.0.3",
-    "react-router-dom": "~5.0.0",
-    "react-test-renderer": "~16.8.6",
-    "sass-loader": "~7.1.0",
-    "style-loader": "~0.23.1",
-    "url-loader": "~1.1.2",
-    "webpack": "~4.31.0",
+    "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-test-renderer": "^16.10.2",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "url-loader": "^2.2.0",
+    "webpack": "^4.41.0",
     "webpack-cli": "~3.3.2",
-    "webpack-dev-server": "~3.3.1",
+    "webpack-dev-server": "^3.8.2",
     "whatwg-fetch": "~3.0.0"
   },
   "jest": {
@@ -81,9 +79,7 @@
       "!src/index.jsx",
       "!src/store.jsx"
     ],
-    "setupFiles": [
-      "./jest-setup.js"
-    ]
+    "setupFiles": []
   },
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.4.4"
